--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend Deca">
-  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/reset.css">
+<link rel="stylesheet" href="./css/styles.css">
   <title>Frontend Mentor | 3-column preview card component</title>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,24 +18,26 @@
 </head>
 <body>
   <main class="container">
-    <section class="section section-sedan">
-      <img src="./images/icon-sedans.svg" alt="Icon Sedan" class="section__logo">
-      <h2 class="section__title">SEDANS</h2>
-      <p class="section__paragraph">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or your next road trip</p>
-      <button class="btn">Learn more</button>
-    </section>
-    <section class="section section-suvs">
-      <img src="./images/icon-suvs.svg" alt="Icon Sedan" class="section__logo">
-      <h2 class="section__title">SUVS</h2>
-      <p class="section__paragraph">Take an SUV for its spaciuos interior, power, and versatility. Perfect for your next family vacation and off-road adventures</p>
-      <button class="btn">Learn more</button>
-    </section>
-    <section class="section section-luxury">
-      <img src="./images/icon-luxury.svg" alt="Icon Sedan" class="section__logo">
-      <h2 class="section__title">LUXURY</h2>
-      <p class="section__paragraph">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
-      <button class="btn">Learn more</button>
-    </section>
+    <div class="card">
+      <section class="section section--sedan">
+        <img src="./images/icon-sedans.svg" alt="Icon Sedan" class="section__logo">
+        <h2 class="section__title">SEDANS</h2>
+        <p class="section__paragraph">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or your next road trip.</p>
+        <button class="btn btn--sedan">Learn more</button>
+      </section>
+      <section class="section section--suvs">
+        <img src="./images/icon-suvs.svg" alt="Icon Sedan" class="section__logo">
+        <h2 class="section__title">SUVS</h2>
+        <p class="section__paragraph">Take an SUV for its spaciuos interior, power, and versatility. Perfect for your next family vacation and off-road .adventures</p>
+        <button class="btn btn--suvs">Learn more</button>
+      </section>
+      <section class="section section--luxury">
+        <img src="./images/icon-luxury.svg" alt="Icon Sedan" class="section__logo">
+        <h2 class="section__title">LUXURY</h2>
+        <p class="section__paragraph">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
+        <button class="btn btn--luxury">Learn more</button>
+      </section>
+    </div>
   </main>
 </body>
 </html>
